[tool.poetry]
name = "gram2vec"
version = "0.1.0"
description = ""
authors = ["Eric Sclafani"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
demoji = "^1.1.0"
numpy = "^1.24.0"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
spacy = "^3.4.4"
ipykernel = "^6.19.4"
nltk = "^3.8"
ipdb = "^0.13.11"
ijson = "^3.1.4"
nbformat = "^5.7.1"
metric-learn = "^0.6.2"
jsonlines = "^3.1.0"
more-itertools = "^9.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
datasets = "^2.10.1"


[tool.poetry.group.dev.dependencies]
notebook = "^6.5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "gram2vec", 
]